📦 NEW: delete user get by id
